# ai-playbook

./: .ai-playbook.toml  .deprecations.toml  .gitignore  .lychee.toml  .markdownlint.jsonc  .pre-commit-config.yaml  .vale.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  mutation-baseline.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  eval-drift.yml  link-check.yml  mutation.yml  pre-commit-autoupdate.yml  release.yml  scorecard.yml
agents/: code-inspector.agent.md  diff-reviewer.agent.md  docs-maintainer.agent.md  incident-responder.agent.md  release-captain.agent.md  slice-planner.agent.md  story-refiner.agent.md  xp-pair-programmer.agent.md
commands/: code-inspector.md  diff-reviewer.md  docs-maintainer.md  incident-responder.md  release-captain.md  slice-planner.md  status.md  story-refiner.md  xp-pair-programmer.md
docs/: README.md  architecture.md  cli-reference.md  deprecation-policy.md  docs-guide.md  getting-started.md  limitations.md  references.md  user-guide.md
docs/adr/: 0001-bitbucket-server-not-supported.md  0002-cli-module-layering.md  0003-pack-overlay-last-wins.md  0004-two-phase-backup-restore.md  README.md
docs/how-to/: agent-telemetry.md  choose-workflow-path.md  enforce-quality.md  invoke-agents.md  reduce-token-usage.md  resume-session.md  run-with-local-models.md  scale-agent-automation.md  setup-issue-tracker.md  setup-multi-repo.md  write-a-pack.md
docs/rfcs/: 0002-lessons-log.md  README.md
evals/: code-inspector-adversarial-expected.md  code-inspector-adversarial-input.md  code-inspector-expected.md  code-inspector-input.md  diff-reviewer-adversarial-expected.md  diff-reviewer-adversarial-input.md  diff-reviewer-expected.md  diff-reviewer-input.md  docs-maintainer-adversarial-expected.md  docs-maintainer-adversarial-input.md  docs-maintainer-expected.md  docs-maintainer-input.md  incident-responder-adversarial-expected.md  incident-responder-adversarial-input.md  incident-responder-expected.md  incident-responder-input.md  release-captain-adversarial-expected.md  release-captain-adversarial-input.md  release-captain-expected.md  release-captain-input.md  run_eval.py  slice-planner-adversarial-expected.md  slice-planner-adversarial-input.md  slice-planner-expected.md  slice-planner-input.md  story-refiner-adversarial-expected.md  story-refiner-adversarial-input.md  story-refiner-expected.md  story-refiner-input.md  xp-pair-programmer-adversarial-expected.md  xp-pair-programmer-adversarial-input.md  xp-pair-programmer-expected.md  xp-pair-programmer-input.md
evals/rubrics/: README.md  _schema.json  code-inspector.json  diff-reviewer.json  docs-maintainer.json  incident-responder.json  release-captain.json  slice-planner.json  story-refiner.json  xp-pair-programmer.json
evals/samples/: README.md  code-inspector.md  diff-reviewer.md  docs-maintainer.md  incident-responder.md  release-captain.md  slice-planner.md  story-refiner.md  xp-pair-programmer.md
harness/: Makefile  check-teachback.sh  ci.yml  dependabot.yml  pre-commit-config.yaml  read-budget.sh  security.yml  settings.example.json  telemetry.sh
knowledge-base/: CHEATSHEET.md  INDEX.md  accessibility.md  debugging.md  decision-mapping.md  design-fundamentals.md  design-patterns.md  doc-linting.md  feature-flags.md  incident-response.md  model-tier.md  observability.md  performance.md  philosophy.md  quality-gates.md  quality-tier-resolution.md  refactoring.md  regression-and-contracts.md  release.md  security.md  style-guide.md  testing-techniques.md  testing.md  tool-policy.md  working-agreement.md
knowledge-base/languages/: python.md  testing-python.md
knowledge-base/workspaces/: README.md
skills/git/: SKILL.md
skills/host-adapter/: SKILL.md
skills/intent-interview/: SKILL.md
skills/issue-fetch/: SKILL.md
skills/notifier/: SKILL.md
skills/retrospective/: SKILL.md
skills/story-writing/: SKILL.md
src/deploy_ai_playbook/: __init__.py  backup.py  cli.py  config.py  console.py  deploy_render.py  discovery.py  doctor.py  errors.py  fs.py  mcp.py  paths.py  safety.py  targets.py  telemetry.py  upgrade.py
templates/: .ai-playbook.toml.example  adr-template.md  agent-template.md  changelog-template.md  domain-language-template.md  feature-flag-registry-template.md  how-to-template.md  importlinter-template.toml  language-conventions-template.md  limitations-template.md  module-readme-template.md  plan-template.md  postmortem-template.md  quality-gates-template.md  research-template.md  review-template.md  rfc-template.md  runbook-template.md  story-bug-template.md  story-spike-template.md  story-template.md  testing-language-template.md
tests/: __init__.py  conftest.py
tests/acceptance/: __init__.py  _helpers.py  contract_data.py  test_agent_contracts.py  test_approval_gate_contracts.py  test_backup.py  test_config_validate.py  test_deploy.py  test_deploy_model_tiers.py  test_deprecations.py  test_diff.py  test_docs_contracts.py  test_doctor.py  test_enable_disable.py  test_eval_contracts.py  test_evals.py  test_harness_release_contracts.py  test_init.py  test_kb_skill_contracts.py  test_pack_validation.py  test_packs.py  test_phrase_pin_convention.py  test_pointer_contracts.py  test_prune.py  test_read_budget_hook.py  test_skill_operation_contracts.py  test_status.py  test_story_workflow_contracts.py  test_upgrade_check.py  test_workflow_chain.py  test_workflow_ordering_contracts.py
tests/unit/: test_agent_size.py  test_architecture.py  test_backup_branches.py  test_claude_md_size.py  test_cli.py  test_config.py  test_discovery.py  test_doctor_service.py  test_evals.py  test_fs_branches.py  test_fuzz_properties.py  test_kb_frontmatter.py  test_kb_integrity.py  test_large_deployments.py  (+6 more)
tools/: check-agent-size.py  check-claude-md-size.py  check-kb-frontmatter.py  check-mutation-baseline.py
(+42 files in other folders)
